# icpc-cheatsheet

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.typ  netlify.toml  template.tex
.github/workflows/: build-and-deploy.yaml  build-cheatsheet.yaml  stress-test.yaml
code/: .bashrc  default.h  template.cpp
code/Matrix/: Matrix.h  matrix.h
code/combinatorics/: BinomialCoefficient.h  Catalan.h
code/data-structures/: AVL.h  DSU.h  FenwickTree.h  LazySegmentTree.h  Matrix.h  PersistentSegmentTree.h  RollbackDSU.h  SegmentTree.h
code/geometry/: Bisector.h  Circle.h  CircleTangents.h  ClosestPair.h  ConvexHull.h  InPolygon.h  Line.h  Point.h  Point3D.h  PolygonArea.h  Ray.h  RotatingCallipers.h  Segment.h
code/graph/: BellmanFord.h  Dijkstra.h  FloydWarshall.h  HLD.h  Kruskal.h  LCA.h  Prim.h  TopologicalSort.h  VirtualTree.h
code/matrix/: Matrix.h
code/number-theory/: BinaryExponentiation.h  Diophantine.h  Euclid.h  Fibonacci.h  Fraction.h  GrayCode.h  Mobius.h  Mod.h  NumberSumProductofDivisors.h  PrimeFactorization.h  Sieve.h  Totient.h
code/strings/: Hashing.h  KMP.h  Manacher.h
src/: content.tex  content.typ
src/combinatorics/: content.tex  content.typ  factorial.tex  factorial.typ
src/contest/: content.tex  content.typ
src/data-structures/: content.tex  content.typ
src/geometry/: content.tex  content.typ
src/graph/: content.tex  content.typ
src/mathematics/: content.tex  content.typ
src/miscalenous/: content.tex  content.typ
src/number-theory/: content.tex  content.typ
src/strings/: content.tex  (+1 more)
(+6 files in other folders)
